--- a/client/public/index.html
+++ b/client/public/index.html
@@ -27,6 +27,16 @@
   <noscript>
     You need to enable JavaScript to run this app.
   </noscript>
+  <script src="https://use.typekit.net/dgr7rdu.js"></script>
+  <script>
+    try {
+      Typekit.load({
+        async: true
+      });
+    } catch (e) {
+      console.log(e)
+    }
+  </script>
   <div id="root"></div>
   <!--
       This HTML file is a template.
